test/redefineLocalFunction1.slq

def main(){
	f:=0;
	def f[a:*](b:a)⇒b; /// error
}
